<resources>
    <string name="app_name">AnimeWatch</string>
    <string name="latest">Latest</string>
    <string name="trending">Trending</string>
    <string name="favorite">Favorite</string>
    <string name="select_episode">Select episode</string>
    <string name="play">Play</string>
    <string name="anime_title">Anime Title</string>
    <string name="anime_description">Anime Description</string>
    <string name="enter_episode_number_to_search">Enter episode</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter anime name to search</string>
    <string name="connection_error">No internet connection detected!</string>
    <string name="reconnect">Click here to reconnect</string>
    <string name="loading_anime">Loading Anime</string>
    <string name="episode">Episode %1$d</string>
    <string name="ep">EP %1$d</string>
    <string name="history">History</string>
    <string name="current_episode">%1$d/%2$d</string>
    <string name="download">Download</string>
    <string name="channel_name">Download Anime Channel</string>
    <string name="channel_description">This is download anime channel</string>
    <string name="download_episode">Download Episode</string>
    <string name="confirm_delete">Confirm Stop</string>
    <string name="confirm_delete_content">An anime is being downloaded, confirm to stop?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_anime">"Delete All Download "</string>
    <string name="are_you_sure_delete_all_anime">Are you sure delete all download anime?</string>
</resources>