<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_episode_search_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/medium"
    android:layout_margin="@dimen/medium"
    android:background="@drawable/custom_bg_dialog_radius_all">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"
        android:textAllCaps="true"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#2BDA32"
        android:layout_marginBottom="@dimen/medium"/>

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_content"
        android:textColor="@color/md_theme_dark_primary"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/medium"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginEnd="@dimen/medium"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>