<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SearchAnimeActivity">

    <LinearLayout
        android:id="@+id/search_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/medium">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="@dimen/medium"
            app:tint="@color/md_theme_dark_onSecondary"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/search_hint"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:imeOptions="actionSearch"
            android:layout_weight="1"
            android:inputType="text"
            android:background="@drawable/edit_text_border"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="@dimen/small"
            android:src="@drawable/ic_search"
            app:tint="@color/md_theme_dark_inversePrimary"
            android:importantForAccessibility="no" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/search_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/md_theme_light_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_connection_error"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_error"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:text="@string/reconnect"/>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/search_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/md_theme_dark_onPrimaryContainer"/>

    </FrameLayout>

</LinearLayout>