<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activities.AnimeStreamActivity">

    <RelativeLayout
        android:id="@+id/anime_stream_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.media3.ui.PlayerView
            android:id="@+id/anime_player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:controller_layout_id="@layout/exo_player_control_view"
            tools:ignore="PrivateResource" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loading_anime_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/medium"
        android:focusable="true"
        android:visibility="gone"
        android:background="#B3000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/loading_anime"
                android:textColor="@color/md_theme_dark_primary"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/small"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/md_theme_dark_onPrimaryContainer"
                android:layout_weight="1"
                android:indeterminate="true" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/anime_stream_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        android:background="#000000">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connection_error"
            android:importantForAccessibility="no"
            app:tint="@color/md_theme_dark_onPrimaryContainer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:textSize="16sp"
            android:textColor="@color/md_theme_dark_onPrimaryContainer"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/reconnect"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/md_theme_dark_onPrimaryContainer"/>

    </FrameLayout>

</RelativeLayout>