<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AnimeDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_banner_overlay"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/md_theme_dark_inversePrimary"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_back"
            app:tint="@color/md_theme_light_onPrimary"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/small"
            android:layout_marginStart="@dimen/medium"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/download_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_download"
            app:tint="@color/md_theme_light_onPrimary"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_alignParentEnd="true"
            android:importantForAccessibility="no" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/anime_details_image_container"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/anime_details_image_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/anime_details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no" />

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/anime_details_title"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:lines="2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/anime_details_image_container"
        app:layout_constraintTop_toTopOf="@id/anime_details_image_container" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anime_details_title">

        <!-- Favourites button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fav_card"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="?attr/colorSurface">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp">

                <ImageView
                    android:id="@+id/img_fav"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_add_favorite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textAlignment="center" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Episode button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ep_card"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="?attr/colorSurface">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_view_ep"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/select_episode"
                        android:src="@drawable/ic_episode" />

                    <TextView
                        android:id="@+id/anime_details_episode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/image_view_ep"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:paddingHorizontal="6dp"
                        android:textSize="14sp"
                        tools:text="Episode 12" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_episode"
                    android:textAlignment="center" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Play button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/play_card"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="?attr/colorSurface">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:textAlignment="center" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small"
            app:cardCornerRadius="24dp"
            app:cardElevation="16dp"
            android:backgroundTint="@color/md_theme_dark_onSecondaryContainer">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/anime_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp" />
            </androidx.core.widget.NestedScrollView>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/anime_details_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C4000000" />

        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/md_theme_dark_onPrimaryContainer" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/anime_details_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        android:background="#fff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connection_error"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/reconnect"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>